Updated afinity to remote submit

--- a/conf/workloads/graph/nweight.conf
+++ b/conf/workloads/graph/nweight.conf
@@ -31,6 +31,6 @@ hibench.nweight.model                   graphx
 hibench.nweight.model_path	${hibench.home}/sparkbench/graph/src/main/resources/nweight-user-features
 
 # export for shell script
-hibench.workload.input			${hibench.hdfs.data.dir}/NWeight/Input/${hibench.scale.profile}
-hibench.workload.output			${hibench.hdfs.data.dir}/NWeight/Output/${hibench.scale.profile}
+hibench.workload.input			${hibench.hdfs.data.dir}/Nweight/Input/${hibench.scale.profile}
+hibench.workload.output			${hibench.hdfs.data.dir}/Nweight/Output/${hibench.scale.profile}
 hibench.workload.edges			${hibench.nweight.edges}
