--- a/conf/workloads/ml/summarizer.conf
+++ b/conf/workloads/ml/summarizer.conf
@@ -21,5 +21,5 @@ hibench.summarizer.features                ${hibench.summarizer.${hibench.scale.
 hibench.summarizer.partitions              ${hibench.default.map.parallelism}
 
 
-hibench.workload.input                 ${hibench.hdfs.data.dir}/summarizer/Input/${hibench.scale.profile}
-hibench.workload.output                ${hibench.hdfs.data.dir}/summarizer/Output/${hibench.scale.profile}
+hibench.workload.input                 ${hibench.hdfs.data.dir}/Summarizer/Input/${hibench.scale.profile}
+hibench.workload.output                ${hibench.hdfs.data.dir}/Summarizer/Output/${hibench.scale.profile}
